<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/dimensions_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorTertiary"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/dimensions_title"
            app:navigationIcon="@drawable/ic_round_arrow_back"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <SearchView
            android:id="@+id/dimensions_search"
            style="@style/Widget.AppCompat.SearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:iconifiedByDefault="false"
            android:padding="4dp"
            android:queryHint="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dimensions_toolbar" />

        <TextView
            android:id="@+id/tab_title_manufacturer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tab_title_manufacturer"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dimensions_search" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/dimensions_tabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_title_manufacturer_text"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/button_red"
            app:tabTextColor="@color/main_blue">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Braas" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Creaton" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nelskamp" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Erlus" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Laumans" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jacobi" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Röben" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wienerberger" />

        </com.google.android.material.tabs.TabLayout>

        <TextView
            android:id="@+id/tab_title_product_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tab_title_product"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dimensions_tabLayout" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager_dimensions"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_title_product_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>