<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/main_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorTertiary"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/text_black"
            app:titleCentered="true"
            app:navigationIcon="@drawable/ic_round_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"/>

        <ImageView
            android:id="@+id/main_logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/logo_dachdecker" />

        <ImageButton
            android:id="@+id/button_my_projects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:adjustViewBounds="false"
            android:background="#00FFFFFF"
            android:cropToPadding="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
            app:srcCompat="@drawable/button_big_red" />

        <ImageButton
            android:id="@+id/button_calculations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:background="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
            app:srcCompat="@drawable/button_big_red" />

        <ImageButton
            android:id="@+id/button_dimensions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/button_my_projects"
            app:layout_constraintTop_toBottomOf="@+id/button_my_projects"
            app:srcCompat="@drawable/button_big_red" />

        <ImageButton
            android:id="@+id/button_formcollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/button_calculations"
            app:layout_constraintTop_toBottomOf="@+id/button_calculations"
            app:srcCompat="@drawable/button_big_red" />

        <ImageView
            android:id="@+id/icon_my_projects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_my_projects"
            app:layout_constraintEnd_toEndOf="@+id/button_my_projects"
            app:layout_constraintStart_toStartOf="@+id/button_my_projects"
            app:srcCompat="@drawable/myproject_icon" />

        <ImageView
            android:id="@+id/icon_calculations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_calculations"
            app:layout_constraintEnd_toEndOf="@+id/button_calculations"
            app:layout_constraintStart_toStartOf="@+id/button_calculations"
            app:srcCompat="@drawable/calculations_icon" />

        <ImageView
            android:id="@+id/icon_dimensions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_dimensions"
            app:layout_constraintEnd_toEndOf="@+id/button_dimensions"
            app:layout_constraintStart_toStartOf="@+id/button_dimensions"
            app:srcCompat="@drawable/dimensions_icon" />

        <ImageView
            android:id="@+id/icon_formcollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_formcollection"
            app:layout_constraintEnd_toEndOf="@+id/button_formcollection"
            app:layout_constraintStart_toStartOf="@+id/button_formcollection"
            app:srcCompat="@drawable/formcollection_icon" />

        <TextView
            android:id="@+id/text_my_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myProject_title"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/icon_my_projects"
            app:layout_constraintEnd_toEndOf="@+id/button_my_projects"
            app:layout_constraintStart_toStartOf="@+id/button_my_projects" />

        <TextView
            android:id="@+id/text_calculations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculations_title"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/icon_calculations"
            app:layout_constraintEnd_toEndOf="@+id/button_calculations"
            app:layout_constraintStart_toStartOf="@+id/button_calculations" />

        <TextView
            android:id="@+id/text_dimensoins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dimensions_title"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/icon_dimensions"
            app:layout_constraintEnd_toEndOf="@+id/button_dimensions"
            app:layout_constraintStart_toStartOf="@+id/button_dimensions" />

        <TextView
            android:id="@+id/text_formcollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formcollection_title"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/icon_formcollection"
            app:layout_constraintEnd_toEndOf="@+id/button_formcollection"
            app:layout_constraintStart_toStartOf="@+id/button_formcollection" />

        <TextView
            android:id="@+id/tv_welcome_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button_my_projects"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
            tools:text="Willkommen #USERNAME" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>